--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "massive": "^6.6.1",
+    "node-sass": "^4.14.1",
     "nodemailer": "^6.4.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
