--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.1",
     "massive": "^6.6.1",
     "node-sass": "^4.14.1",
+    "nodejs-nodemailer-outlook": "^1.2.4",
     "nodemailer": "^6.4.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
